--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "typescript": "^4.6.3",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1"
+    "webpack-dev-server": "^4.8.1", 
+    "styled-components": "^5.3.5"
+  },
+  "dependencies": {
   }
 }
