--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "babel-loader": "^8.2.4",
+    "clean-webpack-plugin": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router": "^6.3.0",
+    "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1", 
-    "styled-components": "^5.3.5"
+    "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
+    "copy-webpack-plugin": "^10.2.4"
   }
 }
