--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc --watch & webpack serve --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "lint": "eslint ./src --fix & prettier ./src/ts --write"
   },
   "repository": {
     "type": "git",
@@ -23,11 +24,19 @@
     "@babel/preset-react": "^7.16.7",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
     "babel-loader": "^8.2.4",
     "clean-webpack-plugin": "^4.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router": "^6.3.0",
+    "copy-webpack-plugin": "^10.2.4",
+    "eslint": "^8.12.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "prettier": "^2.6.2",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
     "webpack": "^5.71.0",
@@ -35,6 +44,8 @@
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
-    "copy-webpack-plugin": "^10.2.4"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router": "^6.3.0"
   }
 }
