--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "tsc --watch & webpack serve --mode development",
     "build": "webpack --mode production",
-    "lint": "eslint ./src --fix & prettier ./src/ts --write"
+    "lint": "eslint ./src --fix & prettier ./src/ts --write",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "jest": "^27.5.1",
     "prettier": "^2.6.2",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
